<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorSwatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:height="@dimen/colorSwatchSize" />



    <TextView
        android:id="@+id/hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/hueLayout"
        android:text="@string/hue"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@id/colorSwatch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        />

    <FrameLayout
        android:id="@+id/hueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hue"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/hueGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_hue"
            android:contentDescription="@string/hue_description" />

        <SeekBar
            android:id="@+id/HueS"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:elevation="9dp"
            android:max="359" />
    </FrameLayout>

    <TextView
        android:id="@+id/saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/saturationLayout"
        android:text="@string/saturation"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@id/hueLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <FrameLayout
        android:id="@+id/saturationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturation"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/saturationGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_saturation"
            android:contentDescription="@string/saturation_description" />

        <SeekBar
            android:id="@+id/SaturationS"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:max="100" />
    </FrameLayout>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/valueLayout"
        android:text="@string/value"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@id/saturationLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <FrameLayout
        android:id="@+id/valueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/valueGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_brightness"
            android:contentDescription="@string/value_description" />

        <SeekBar
            android:id="@+id/ValueS"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:max="100" />
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/colorScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:id="@+id/colorButtonGroup"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_padding"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blackButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:background="@android:color/black"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/redButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/red"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/limeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/lime"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/blueButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/blue"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/yellowButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/yellow"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/cyanButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/cyan"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/magentaButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/magenta"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/silverButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/silver"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/grayButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/gray"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/maroonButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/maroon"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/oliveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/olive"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/greenButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/green"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/purpleButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/purple"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/tealButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/teal"
                android:onClick="onColorButtonClick"/>

            <Button
                android:id="@+id/navyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/colorBoxSize"
                android:layout_height="@dimen/colorBoxSize"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/navy"
                android:onClick="onColorButtonClick"/>

        </LinearLayout>
    </HorizontalScrollView>


</android.widget.RelativeLayout>
